Improve rendering & highlight hovered tab

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ body {
   position: relative;
 }
 
+.tab:hover {
+  background-color: yellow;
+}
+
 .tab button {
   position: absolute;
   right: 0;
