--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,9 @@ header {
 .tab input[type=checkbox] {
   pointer-events: none;
 }
+
+.tab .spinner {
+  height: .7em;
+  margin: 0 .3em;
+  vertical-align: middle;
+}
